<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.CustomSettingsFragment">



    <ImageButton
        android:id="@+id/customSettingsBackButton"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:background="@color/white"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_back_green_transp"
        />



    <TextView
        android:id="@+id/profileSettingsTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:text="@string/profil"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/green_500"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp">

    <TextView
        android:id="@+id/editProfileSettingsTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:text="@string/editeaza_profilul"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:clickable="true"
        android:focusable="true"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/deleteProfileSettingsTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:text="@string/terge_profilul"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/adminSettingsTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:text="@string/administrator"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/green_500"
        tools:ignore="RtlSymmetry" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/suggestionsSettingsTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:text="@string/observa_ii_sugestii_c_tre_administrator"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/accountSettingsTextView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="20dp"
        android:text="@string/cont"
        android:textStyle="bold"
        android:textSize="19sp"
        android:textColor="@color/green_500"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/logOutSettingsTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:text="Log out"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="RtlSymmetry" />

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>