<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.SignUpFragment">

        <EditText
            android:id="@+id/emailSignUpEditText"
            android:layout_width="281dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.529" />

        <EditText
            android:id="@+id/lastNameSignUp"
            android:layout_width="281dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/numele_de_familie"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.446" />

        <EditText
            android:id="@+id/firstNameSignUp"
            android:layout_width="281dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/prenumele"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.355" />


        <EditText
            android:id="@+id/passwordCheckSignUpEditText"
            android:layout_width="281dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/repeta_parola"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.714" />

        <EditText
            android:id="@+id/passwordSignUpEditText"
            android:layout_width="281dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/parola"
            android:inputType="textPassword"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.618" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textSize="16sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.911" />

        <ImageButton
            android:id="@+id/backSignUpButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_back_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <ImageView
            android:id="@+id/logoSignUpImageView"
            android:layout_width="137dp"
            android:layout_height="134dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.126" />

        <RadioGroup
            android:layout_width="260dp"
            android:layout_height="66dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.437"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.818" >

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="260dp"
                android:layout_height="66dp"
                android:orientation="horizontal">       <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/client"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.265"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.809" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/comerciant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.635"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.809" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
