<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.PermissionsFragment">

        <Button
            android:id="@+id/continuaButton"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="68dp"
            android:text="@string/continua"
            android:textAlignment="center"
            android:textSize="18sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/permissionsTextView"
            android:layout_width="367dp"
            android:layout_height="128dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="28dp"
            android:text="@string/permission_text"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/continuaButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bunVenitTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/bun_venit"
            android:textAlignment="center"
            android:textColor="@color/green_500"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/permissionImageView"
            android:layout_width="286dp"
            android:layout_height="292dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="3dp"
            android:src="@drawable/illustration_permission_request"
            app:layout_constraintBottom_toTopOf="@+id/permissionsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bunVenitTextView"
            app:layout_constraintVertical_bias="0.317"
            android:contentDescription="@string/todo" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>