<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LoginFragment">

    <EditText
        android:id="@+id/emailLoginEditText"
        android:layout_width="322dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="322dp"
        android:layout_height="60dp"
        android:ems="10"
        android:hint="@string/parola"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.554"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="16sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656" />

    <TextView
        android:id="@+id/noMemberTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/not_a_member_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.514" />


    <Button
        android:id="@+id/signUpFromLoginButton"
        android:layout_width="259dp"
        android:layout_height="41dp"
        android:backgroundTint="@color/green_700"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="14sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noMemberTextView"
        app:layout_constraintVertical_bias="0.387" />

    <ImageButton
        android:id="@+id/backLoginButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_back_green_transp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.07"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:layout_width="137dp"
        android:layout_height="134dp"
        android:src="@drawable/logo"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

</androidx.constraintlayout.widget.ConstraintLayout>