<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

<data>

</data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.NewProductFragment">

        <ImageButton
            android:id="@+id/backNewProductAdminButton"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@color/white"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_back_green_transp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04" />

        <Button
            android:id="@+id/addNewProductAdminButton"
            android:layout_width="310dp"
            android:layout_height="53dp"
            android:text="@string/adaug"
            android:backgroundTint="@color/green_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.87" />

        <ImageView
            android:id="@+id/newProductAdminImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.096" />

        <Button
            android:id="@+id/addPhotoNewProductButton"
            android:layout_width="110dp"
            android:layout_height="38dp"
            android:backgroundTint="@color/green_200"
            android:text="@string/narc"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.242" />

        <EditText
            android:id="@+id/nameNewProductAdminEditText"
            android:layout_width="282dp"
            android:layout_height="43dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nume"
            app:layout_constraintBottom_toTopOf="@+id/addNewProductAdminButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoNewProductButton"
            app:layout_constraintVertical_bias="0.013" />

        <EditText
            android:id="@+id/categoryNewProductAdminEditText"
            android:layout_width="282dp"
            android:layout_height="46dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/categorie"
            app:layout_constraintBottom_toTopOf="@+id/descriptionNewProductAdminEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameNewProductAdminEditText" />

        <EditText
            android:id="@+id/descriptionNewProductAdminEditText"
            android:layout_width="287dp"
            android:layout_height="146dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:hint="@string/descriere"
            app:layout_constraintBottom_toTopOf="@+id/addNewProductAdminButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameNewProductAdminEditText"
            app:layout_constraintVertical_bias="0.742" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>